--- a/src/main/resources/static/styles/menu.scss
+++ b/src/main/resources/static/styles/menu.scss
@@ -28,14 +28,13 @@
     justify-content: center;
     align-items: center;
     #menu-item-top {
-      width: 50vw;
+      width: 100%;
       height: 35vh;
       display: flex;
       flex-flow: row;
-      justify-content: center;
+      justify-content: space-evenly;
       align-items: center;
       #menu-item-main-info {
-        width: 25vw;
         height: 100%;
         display: flex;
         flex-flow: column;
@@ -53,6 +52,18 @@
       align-items: center;
     }
   }
+  @media (width <= 950px) {
+    #menu-item-details-container {
+      width: unset;
+      padding: 1em;
+    }
+  }
+  @media (width <= 500px) {
+    #menu-item-top {
+      flex-flow: column !important;
+      height: unset !important;
+    }
+  }
 }
 
 
@@ -60,7 +71,7 @@
   #menu-banner {
     width: 100%;
     padding-bottom: 5vh;
-    padding-top: 2vh;
+    padding-top: 10vh;
     h1 {
       width: 100%;
       text-align: center;
