--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -350,6 +350,40 @@ body {
   z-index: 2;
   background: linear-gradient(to right, #111111, rgba(17, 17, 17, 0.6));
 }
+@media (width <= 700px) {
+  #site-content #hero-content {
+    position: relative;
+  }
+  #site-content #hero-content #hero-interactable {
+    width: 90%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 5;
+    padding: 5%;
+    align-items: center;
+    text-align: center;
+  }
+  #site-content #hero-content #hero-interactable h1 {
+    font-size: 4em;
+  }
+  #site-content #hero-content #hero-interactable #hero-button-container {
+    padding-right: unset;
+  }
+  #site-content #hero-content #hero-bgimg {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+  #site-content #hero-content #hero-bgimg #hero-bgimg-overlay {
+    background: rgba(17, 17, 17, 0.9);
+  }
+}
 #site-content #item-promo {
   width: 100%;
   overflow: hidden;
@@ -456,9 +490,25 @@ body {
 #site-content #item-promo #item-scroll-area #item-scroll-overflow #item-scroll-container .top-rated-item-tile .top-rated-item-tile-content .item-promo-button {
   transform: scale(0.75);
 }
+@media (width <= 925px) {
+  #site-content #item-promo .top-rated-item-tile {
+    width: 27.5vw !important;
+  }
+}
+@media (width <= 625px) {
+  #site-content #item-promo .top-rated-item-tile {
+    width: 42.7vw !important;
+  }
+}
+@media (width <= 475px) {
+  #site-content #item-promo .top-rated-item-tile {
+    width: 85vw !important;
+  }
+}
 #site-content #current-featured {
   width: fit-content;
   min-width: 40vw;
+  max-width: 80%;
   height: 60vh;
   display: flex;
   flex-flow: column;
@@ -470,6 +520,7 @@ body {
 }
 #site-content #current-featured #featured-overlay {
   height: 100%;
+  max-width: 100%;
   z-index: 2;
   background: rgb(11.9, 11.9, 11.9);
   display: flex;
@@ -520,6 +571,7 @@ body {
   justify-content: center;
   align-items: center;
   margin-top: 5vh;
+  gap: 1vh;
 }
 #site-content #top-ratings-display h1 {
   padding-top: 5vh;
@@ -570,6 +622,17 @@ body {
   right: 0;
   top: 0;
 }
+@media (width <= 1000px) {
+  #site-content #top-ratings-display h6, #site-content #top-ratings-display p {
+    width: 100% !important;
+  }
+  #site-content #top-ratings-display .rating-left {
+    padding-left: 1em;
+  }
+  #site-content #top-ratings-display .rating-right {
+    padding-right: 1em;
+  }
+}
 #site-content #member-benefit-promo {
   width: 50vh;
   height: fit-content;
@@ -580,25 +643,28 @@ body {
   text-align: center;
   background: rgb(11.9, 11.9, 11.9);
   border-radius: 1em;
-  padding: 1em;
+  padding: 5%;
   gap: 5vh;
   margin-top: 15vh;
+  max-width: 90%;
 }
 #site-content #approaches-container {
   width: 100%;
-  height: 100vh;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
   margin-top: 20vh;
+  padding-bottom: 10vh;
+  text-align: center;
 }
 #site-content #approaches-container #approaches-grid {
-  display: grid;
-  grid-template-columns: 20vw 20vw 20vw;
-  grid-template-rows: 20vw 20vw;
-  grid-gap: 3vw;
+  display: flex;
+  gap: 3vw;
+  flex-wrap: wrap;
   margin-top: 5vh;
+  justify-content: center;
+  align-items: center;
 }
 #site-content #approaches-container .approaches-tile {
   background: rgba(0, 184, 55, 0);
@@ -610,7 +676,7 @@ body {
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 30%;
   text-align: center;
   word-wrap: break-word;
   cursor: pointer;
@@ -621,12 +687,22 @@ body {
 #site-content #approaches-container .approaches-tile .approaches-tile-content {
   padding: 1em;
 }
+@media (width <= 800px) {
+  #site-content #approaches-container .approaches-tile {
+    width: 40% !important;
+  }
+}
+@media (width <= 575px) {
+  #site-content #approaches-container .approaches-tile {
+    width: 70% !important;
+  }
+}
 #site-content #collaborate-container {
+  display: flex;
   min-width: 80vw;
   height: auto;
   margin-top: 20vh;
   margin-bottom: 10vh;
-  display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
@@ -692,6 +768,21 @@ body {
   position: absolute;
   left: 0;
   top: 0;
+}
+@media (width <= 950px) {
+  #site-content #collaborate-container #collaborate-info-text {
+    border: none !important;
+  }
+  #site-content #collaborate-container #collaborate-info-text::after {
+    width: 0 !important;
+    height: 0 !important;
+    background: transparent !important;
+  }
+}
+@media (width <= 800px) {
+  #site-content #collaborate-container #collaborate-info-image {
+    display: none !important;
+  }
 }
 
 #footer {
