--- a/src/main/resources/static/styles/home/approaches-container.scss
+++ b/src/main/resources/static/styles/home/approaches-container.scss
@@ -1,19 +1,22 @@
 #approaches-container {
   width: 100%;
-  height: 100vh;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
   margin-top: 20vh;
+  padding-bottom: 10vh;
+  text-align: center;
 
   #approaches-grid {
-    display: grid;
-    grid-template-columns: 20vw 20vw 20vw;
-    grid-template-rows: 20vw 20vw;
-    grid-gap: 3vw;
+    display: flex;
+    gap: 3vw;
+    flex-wrap: wrap;
     margin-top: 5vh;
+    justify-content: center;
+    align-items: center;
   }
+
 
   .approaches-tile {
     background: transparentize($accent, 1);
@@ -25,7 +28,7 @@
     flex-flow: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 30%;
     text-align: center;
     word-wrap: break-word;
     cursor: pointer;
@@ -40,4 +43,15 @@
   }
 
 
+  @media (width <= 800px) {
+    .approaches-tile {
+      width: 40% !important;
+    }
+  }
+
+  @media (width <= 575px) {
+    .approaches-tile {
+      width: 70% !important;
+    }
+  }
 }
