--- a/src/main/resources/static/styles/home/current-featured.scss
+++ b/src/main/resources/static/styles/home/current-featured.scss
@@ -1,6 +1,7 @@
 #current-featured {
   width: fit-content;
   min-width: 40vw;
+  max-width: 80%;
   height: 60vh;
   display: flex;
   flex-flow: column;
@@ -12,6 +13,7 @@
 
   #featured-overlay {
     height: 100%;
+    max-width: 100%;
     z-index: 2;
     background: darken($secondary, 2%);
     display: flex;
