--- a/src/main/resources/static/styles/home/hero.scss
+++ b/src/main/resources/static/styles/home/hero.scss
@@ -54,4 +54,39 @@
     z-index: 2;
     background: linear-gradient(to right, transparentize($secondary, 0), transparentize($secondary, 0.4));
   }
+
+  @media (width <= 700px) {
+    position: relative;
+
+    #hero-interactable {
+      width: 90%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 5;
+      padding: 5%;
+      align-items: center;
+      text-align: center;
+      h1 {
+        font-size: 4em;
+      }
+      #hero-button-container {
+        padding-right: unset;
+      }
+    }
+
+    #hero-bgimg {
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      #hero-bgimg-overlay {
+        background: transparentize($secondary, 0.1);
+      }
+    }
+  }
 }
