--- a/src/main/resources/static/styles/home/member-benefit-promo.scss
+++ b/src/main/resources/static/styles/home/member-benefit-promo.scss
@@ -8,7 +8,8 @@
   text-align: center;
   background: darken($secondary, 2%);
   border-radius: 1em;
-  padding: 1em;
+  padding: 5%;
   gap: 5vh;
   margin-top: 15vh;
+  max-width: 90%;
 }
