--- a/src/main/resources/static/styles/home/top-ratings-display.scss
+++ b/src/main/resources/static/styles/home/top-ratings-display.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 5vh;
+  gap: 1vh;
   h1 {
     padding-top: 5vh;
     padding-bottom: 5vh;
@@ -54,5 +55,17 @@
     position: absolute;
     right: 0;
     top: 0;
+  }
+
+  @media (width <= 1000px) {
+    h6, p {
+      width: 100% !important;
+    }
+    .rating-left {
+      padding-left: 1em;
+    }
+    .rating-right {
+      padding-right: 1em;
+    }
   }
 }
