--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -69,7 +69,7 @@ Requisite content:
 
     <div id="hero-content">
         <div id="hero-interactable">
-            <h1 style="font-size: 5em;">Bringing Premium to Fast Food</h1>
+            <h1>Bringing Premium to Fast Food</h1>
             <h6>So bring home a guilt-free delectable experience.</h6>
             <div id="hero-button-container">
                 <button onclick="location.href=window.location.href + 'menu';">Menu</button>
