--- a/src/main/resources/static/styles/viewcart.css
+++ b/src/main/resources/static/styles/viewcart.css
@@ -331,6 +331,12 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+#site-content #cart-display #cart-totals #totals-left {
+  display: flex;
+  flex-flow: column;
+  gap: 5vh;
+  text-align: center;
+}
 #site-content #cart-display #cart-totals #cart-price {
   display: flex;
   flex-flow: row;
@@ -358,6 +364,7 @@ body {
   #site-content #cart-display #cart-totals {
     flex-flow: column;
     gap: 5vh;
+    text-align: center;
   }
 }
 #site-content #cart-display #cart-order-container {
@@ -366,6 +373,39 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.code-input-container {
+  border-radius: 1em;
+  padding: 0.5em;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.code-input-container .label-code-input {
+  background: #111111;
+  width: fit-content;
+  position: absolute;
+  top: -0.3em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  font-family: "SUSE", sans;
+  font-weight: 500;
+  font-size: 1.1em;
+  color: #EEEEEE;
+}
+.code-input-container input, .code-input-container input:focus, .code-input-container input:hover, .code-input-container input:-webkit-autofill, .code-input-container input:focus-visible {
+  border: 1px solid #00B837 !important;
+  border-radius: 1em;
+  padding: 0.5em;
+  background: none !important;
+  font-family: "Open Sans", sans;
+  outline: none !important;
+  color: #EEEEEE;
+  transition: color 1s ease-in-out;
+  text-align: center;
 }
 
 /*# sourceMappingURL=viewcart.css.map */
