Added functionality to add a specific number of items.

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -66,6 +66,12 @@
         </div>
         <div id="menu-item-desc-container">
             <p id="menu-item-overlay-desc"></p>
+            <div id="item-count-container" class="item-count-container">
+                <label id="item-count-label" class="label-item-count">
+                    Item Count
+                </label>
+                <input type="number" id="item-count-input" autocomplete="name" value=1>
+            </div>
             <button id="add-to-cart-button" onclick="addItemToCart();">Add to Cart</button>
         </div>
     </div>
