--- a/src/main/resources/static/styles/menu.css
+++ b/src/main/resources/static/styles/menu.css
@@ -514,4 +514,36 @@ body {
   font-size: 1.75em;
 }
 
+.item-count-container {
+  border-radius: 1em;
+  padding: 0.5em;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.item-count-container .label-item-count {
+  background: rgb(29.75, 29.75, 29.75);
+  width: fit-content;
+  position: absolute;
+  top: -0.3em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  font-family: "SUSE", sans;
+  font-weight: 500;
+  font-size: 1.1em;
+  color: #EEEEEE;
+}
+.item-count-container input, .item-count-container input:focus, .item-count-container input:hover, .item-count-container input:-webkit-autofill, .item-count-container input:focus-visible {
+  border: 1px solid #00B837 !important;
+  border-radius: 1em;
+  padding: 0.5em;
+  background: none !important;
+  font-family: "Open Sans", sans;
+  outline: none !important;
+  color: #EEEEEE;
+  transition: color 1s ease-in-out;
+}
+
 /*# sourceMappingURL=menu.css.map */
