--- a/src/main/resources/static/styles/menu.scss
+++ b/src/main/resources/static/styles/menu.scss
@@ -82,3 +82,36 @@
 
   @import 'menu/menu_item_display';
 }
+
+
+.item-count-container {
+  border-radius: 1em;
+  padding: 0.5em;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  .label-item-count {
+    background: lighten($secondary, 5%);
+    width: fit-content;
+    position: absolute;
+    top: -0.3em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    font-family: $headingFamily;
+    font-weight: 500;
+    font-size: 1.1em;
+    color: $primary;
+  }
+  input, input:focus, input:hover, input:-webkit-autofill, input:focus-visible {
+    border: 1px solid $accent !important;
+    border-radius: 1em;
+    padding: 0.5em;
+    background: none !important;
+    font-family: $paragraphFamily;
+    outline: none !important;
+    color: $primary;
+    transition: color 1s ease-in-out;
+  }
+}
