Improvements to animations and functionality in the home page.

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
     <script src="/js/header.js"></script>
     <script src="/js/menu.js"></script>
+    <script src="/js/item_cart_handling.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 </head>
