--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -790,6 +790,101 @@ body {
   }
 }
 
+#menu-item-overlay {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background: rgba(17, 17, 17, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 4;
+}
+#menu-item-overlay #menu-item-details-container {
+  width: 50vw;
+  height: 70vh;
+  position: relative;
+  background: rgb(29.75, 29.75, 29.75);
+  border-radius: 2em;
+  z-index: 5;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+}
+#menu-item-overlay #menu-item-details-container #menu-item-top {
+  width: 100%;
+  height: 35vh;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#menu-item-overlay #menu-item-details-container #menu-item-top #menu-item-main-info {
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  gap: 1vh;
+  align-items: center;
+}
+#menu-item-overlay #menu-item-details-container #menu-item-desc-container {
+  width: 50vw;
+  height: 35vh;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+@media (width <= 950px) {
+  #menu-item-overlay #menu-item-details-container {
+    width: unset;
+    padding: 1em;
+  }
+}
+@media (width <= 500px) {
+  #menu-item-overlay #menu-item-top {
+    flex-flow: column !important;
+    height: unset !important;
+  }
+}
+
+.item-count-container {
+  border-radius: 1em;
+  padding: 0.5em;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.item-count-container .label-item-count {
+  background: rgb(29.75, 29.75, 29.75);
+  width: fit-content;
+  position: absolute;
+  top: -0.3em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  font-family: "SUSE", sans;
+  font-weight: 500;
+  font-size: 1.1em;
+  color: #EEEEEE;
+}
+.item-count-container input, .item-count-container input:focus, .item-count-container input:hover, .item-count-container input:-webkit-autofill, .item-count-container input:focus-visible {
+  border: 1px solid #00B837 !important;
+  border-radius: 1em;
+  padding: 0.5em;
+  background: none !important;
+  font-family: "Open Sans", sans;
+  outline: none !important;
+  color: #EEEEEE;
+  transition: color 1s ease-in-out;
+}
+
 #footer {
   width: 100%;
   min-height: 5vh;
