--- a/src/main/resources/static/styles/menu.scss
+++ b/src/main/resources/static/styles/menu.scss
@@ -2,69 +2,7 @@
 @import 'header';
 
 
-#menu-item-overlay {
-  display: none;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100vh;
-  background: transparentize($secondary, 0.2);
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 4;
 
-  #menu-item-details-container {
-    width: 50vw;
-    height: 70vh;
-    position: relative;
-    background: lighten($secondary, 5%);
-    border-radius: 2em;
-    z-index: 5;
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    #menu-item-top {
-      width: 100%;
-      height: 35vh;
-      display: flex;
-      flex-flow: row;
-      justify-content: space-evenly;
-      align-items: center;
-      #menu-item-main-info {
-        height: 100%;
-        display: flex;
-        flex-flow: column;
-        justify-content: center;
-        gap: 1vh;
-        align-items: center;
-      }
-    }
-    #menu-item-desc-container {
-      width: 50vw;
-      height: 35vh;
-      display: flex;
-      flex-flow: column;
-      justify-content: space-evenly;
-      align-items: center;
-    }
-  }
-  @media (width <= 950px) {
-    #menu-item-details-container {
-      width: unset;
-      padding: 1em;
-    }
-  }
-  @media (width <= 500px) {
-    #menu-item-top {
-      flex-flow: column !important;
-      height: unset !important;
-    }
-  }
-}
 
 
 #site-content {
@@ -84,34 +22,4 @@
 }
 
 
-.item-count-container {
-  border-radius: 1em;
-  padding: 0.5em;
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  .label-item-count {
-    background: lighten($secondary, 5%);
-    width: fit-content;
-    position: absolute;
-    top: -0.3em;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    font-family: $headingFamily;
-    font-weight: 500;
-    font-size: 1.1em;
-    color: $primary;
-  }
-  input, input:focus, input:hover, input:-webkit-autofill, input:focus-visible {
-    border: 1px solid $accent !important;
-    border-radius: 1em;
-    padding: 0.5em;
-    background: none !important;
-    font-family: $paragraphFamily;
-    outline: none !important;
-    color: $primary;
-    transition: color 1s ease-in-out;
-  }
-}
+@import 'additemoverlay';
