--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
     <script src="/js/header.js"></script>
     <script src="/js/home.js"></script>
+    <script src="/js/item_cart_handling.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 </head>
@@ -64,6 +65,32 @@ Requisite content:
 </div>
 
 
+<div id="menu-item-overlay" onclick="hideOverlay(event, this);">
+    <div id="menu-item-details-container">
+        <div id="menu-item-top">
+            <div id="menu-item-main-info">
+                <div id="menu-item-label"><h2 id="menu-item-overlay-name">Test1</h2></div>
+                <div id="menu-item-price"><h4 id="menu-item-overlay-price">Test2</h4></div>
+                <div id="menu-item-rating"><h5 id="menu-item-overlay-rating"></h5></div>
+            </div>
+            <div id="menu-item-image">
+                <img id="menu-item-overlay-image" src="" alt="menu item overlay extra info image." style="width: 100%;height: 30vh;object-fit: contain;">
+            </div>
+        </div>
+        <div id="menu-item-desc-container">
+            <p id="menu-item-overlay-desc"></p>
+            <div id="item-count-container" class="item-count-container">
+                <label id="item-count-label" class="label-item-count">
+                    Item Count
+                </label>
+                <input type="number" id="item-count-input" autocomplete="name" value=1>
+            </div>
+            <button id="add-to-cart-button" onclick="addItemToCart();">Add to Cart</button>
+        </div>
+    </div>
+</div>
+
+
 <div id="site-content">
 
 
@@ -73,7 +100,7 @@ Requisite content:
             <h6>So bring home a guilt-free delectable experience.</h6>
             <div id="hero-button-container">
                 <button onclick="location.href=window.location.href + 'menu';">Menu</button>
-                <button>Order</button>
+                <button onclick="location.href=window.location.href + 'cart';">Order</button>
             </div>
         </div>
         <div id="hero-bgimg">
@@ -100,7 +127,7 @@ Requisite content:
                                 <p class="top-rated-item-tile-desc" th:text="${itemTile.description}"></p>
                                 <p class="top-rated-item-tile-rating" th:text="|Rating: ${itemTile.getAveragerating()}/5 (${itemTile.getTotalratings()})|"></p>
                             </div>
-                            <button class="item-promo-button">Add to Cart</button>
+                            <button class="item-promo-button" th:item="${itemTile.getLabel()}" onclick="retrieveItemData(this.getAttribute('item'));">Add to Cart</button>
                         </div>
                     </div>
                 </div>
@@ -119,7 +146,7 @@ Requisite content:
                 <p th:text="${featureditem.getDeal().getMessage()}"></p>
                 <p th:text="|Get ${featureditem.getDeal().getDiscount()}${!featureditem.getDeal().isIsPercentageBased() ? '$' : ''}${featureditem.getDeal().isIsPercentageBased() ? '%' : ''} off on this ${'$'}${featureditem.getPrice()} item|"></p>
             </div>
-            <button>Add to Cart</button>
+            <button th:item="${featureditem.getLabel()}" onclick="retrieveItemData(this.getAttribute('item'));">Add to Cart</button>
         </div>
     </div>
 
@@ -159,32 +186,32 @@ Requisite content:
 
         <div id="approaches-grid">
 
-            <div class="approaches-tile" data-approaches-tile-selected="false" onclick="">
+            <div class="approaches-tile" data-approaches-tile-selected="false">
                 <h3 class="approaches-tile-heading">Fast Food, Done Right</h3>
                 <p class="approaches-tile-content" style="display: none;">Our business is modeled after providing quick and convenient food for our customers. Unlike fast food, we strive to maintain quality and excellence in all we do.</p>
             </div>
 
-            <div class="approaches-tile" data-approaches-tile-selected="false" onclick="">
+            <div class="approaches-tile" data-approaches-tile-selected="false">
                 <h3 class="approaches-tile-heading">Always Convenient</h3>
                 <p class="approaches-tile-content" style="display: none;">We understand that reducing barriers to healthy eating is vital, so keeping the entire process smooth, quick, and frictionless for our customers is a core facet of our strategy.</p>
             </div>
 
-            <div class="approaches-tile" data-approaches-tile-selected="false" onclick="">
+            <div class="approaches-tile" data-approaches-tile-selected="false">
                 <h3 class="approaches-tile-heading">Healthy First</h3>
                 <p class="approaches-tile-content" style="display: none;">Our core mission is to bring healthy food to the masses. As such, our entire menu is vegetarian friendly, balancing nutrition with cost and convenience — for us and our customers.</p>
             </div>
 
-            <div class="approaches-tile" data-approaches-tile-selected="false" onclick="">
+            <div class="approaches-tile" data-approaches-tile-selected="false">
                 <h3 class="approaches-tile-heading">Farm Partnership</h3>
                 <p class="approaches-tile-content" style="display: none;">All of our food is sourced from local farms, cutting out the middle man. This allows us to not only decrease the cost of our menu, but also give back to the community that brought us to where we are today.</p>
             </div>
 
-            <div class="approaches-tile" data-approaches-tile-selected="false" onclick="">
+            <div class="approaches-tile" data-approaches-tile-selected="false">
                 <h3 class="approaches-tile-heading">Friendly Packaging</h3>
                 <p class="approaches-tile-content" style="display: none;">We strive to minimize packaging used for both delivery, drive through, and dine in orders. What little we do use are made from recyclable materials, such as paper or cardboard.</p>
             </div>
 
-            <div class="approaches-tile" data-approaches-tile-selected="false" onclick="">
+            <div class="approaches-tile" data-approaches-tile-selected="false">
                 <h3 class="approaches-tile-heading">Environmental Sustainability</h3>
                 <p class="approaches-tile-content" style="display: none;">We value preserving the health of the environment — if it collapses, we do as well — so we strive to do what we can to preserve it. Our locations all rely on renewable energy sources in varying ways, we invest in carbon capture systems, and even donate all excess food to local food banks!</p>
             </div>
