--- a/src/main/resources/static/styles/menu/menu_item_display.scss
+++ b/src/main/resources/static/styles/menu/menu_item_display.scss
@@ -2,6 +2,7 @@
   width: 90%;
   padding-left: 5%;
   padding-right: 5%;
+  margin-bottom: 5vh;
   .menu-items {
     display: flex;
     flex-flow: column;
