--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -239,7 +239,7 @@ Requisite content:
                     </ul>
                 </div>
                 <p style="text-align:center;font-size:1.1em;">
-                    Send your application to <strong>careers@condelu.jkopecky.dev</strong> today!
+                    Send your resume to <strong>careers@condelu.dev</strong> today!
                 </p>
             </div>
             <div id="collaborate-info-image">
@@ -251,7 +251,6 @@ Requisite content:
 
 
 <div id="footer">
-    <!-- TODO: Add footer -->
     <p>&copy; 2025 ConDelu Meals</p>
 </div>
 
